@@ -6,6 +6,7 @@ require("prototypes/1_technology")
 -- mod tweaks
 require("tweaks.aai.1_update")
 require("tweaks.angelsmods.1_update")
+require("tweaks.Bio_Industries.1_update")
 require("tweaks.bobsmods.1_update")
 require("tweaks.omnimatter.1_update")
 
