@@ -1,0 +1,3 @@
+if mods["Bio_Industries"] then
+  sctm.hide_recipe("bi-production-science-pack")
+end
