@@ -1,0 +1,3 @@
+if mods["Bio_Industries"] then
+  sctm.tech_unlock_remove("production-science-pack", "bi-production-science-pack")
+end
