@@ -3,6 +3,8 @@ Version: 1.2.3
 Date: ???
   Changes:
     - Added prefix to science pack names to make them easily searchable #92
+  Bugfixes:
+    - Fixed duplicate Purple Science recipe with Bio Industries mod #45
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.2
 Date: 3.11.2023
